--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -1,22 +1,35 @@
-<header class="navbar">
+<header class="topbar shadow">
     <div class="container">
-        <div class="topbar-contacts">
-            <div class="topbar-address">
-                <img src="../../../assets/images/topbar/address.png" alt="address" />
-                <a href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9" target="_blank">м.Чорноморськ, вул.Олександрійська, 2</a>
+        <div class="w-full max-w-screen-xl mx-auto p-4 md:py-2">
+            <div class="sm:flex sm:items-center sm:justify-between h-9 min-h-full">
+                <ul
+                    class="flex flex-wrap font-raleway items-center mb-6 flex space-x-12 text-sm font-tiny text-white sm:mb-0">
+                    <li>
+                        <img class="float-left mr-2" src="../../../assets/images/topbar/address.ico" alt="address" />
+                        <a class="hover:text-gray-200" href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9"
+                            target="_blank">м.Чорноморськ, вул.Олександрійська, 2</a>
+                    </li>
+                    <li>
+                        <img class="float-left mr-2" src="../../../assets/images/topbar/phone.ico" alt="phone" />
+                        <a class="hover:text-gray-200" href="tel:">+380962986084</a>
+                    </li>
+                    <li>
+                        <img class="float-left mr-2" src="../../../assets/images/topbar/email.ico" alt="email" />
+                        <a class="hover:text-gray-200"
+                            href="mailto:green.laboratoriya@gmail.com">green.laboratoriya&#64;gmail.com</a>
+                    </li>
+                </ul>
+                <ul class="flex flex-wrap items-center flex space-x-3 mb-6 sm:mb-0">
+                    <li>
+                        <a href="viber://chat?number=%2B380962986084" target="_blank" rel="noreferrer"><img
+                                src="../../../assets/images/topbar/viber.ico" alt="viber" /></a>
+                    </li>
+                    <li>
+                        <a href="https://t.me/+380935582302" target="_blank" rel="noreferrer"><img
+                                src="../../../assets/images/topbar/telegram.ico" alt="telegram" /></a>
+                    </li>
+                </ul>
             </div>
-            <!-- <div class="topbar-phone">
-                <img src="/images/navbar/phone.png" alt="phone" />
-                    <a href="tel:">+380962986084</a>
-            </div>
-            <div class="topbar-email">
-                <img src="/images/navbar/email.png" alt="email" />
-                    <a href="mailto:green.laboratoriya@gmail.com">green.laboratoriya@gmail.com</a>
-            </div> -->
-        </div>
-        <div class="topbar-socials">
-            <!-- <a href="viber://chat?number=%2B380962986084" target="_blank" rel="noreferrer"><img src="/images/navbar/viber.png" alt="viber" /><span></span></a>
-            <a href="https://t.me/+380935582302" target="_blank" rel="noreferrer"><img src="/images/navbar/telegram.png" alt="telegram" /><span></span></a> -->
         </div>
     </div>
 </header>
