--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,19 +11,15 @@
     --gray-700: oklch(36.98% 0.014 302.71);
     --gray-400: oklch(70.9% 0.015 304.04);
 
-    --red-to-pink-to-purple-vertical-gradient: linear-gradient(
-      180deg,
-      var(--orange-red) 0%,
-      var(--vivid-pink) 50%,
-      var(--electric-violet) 100%
-    );
+    --red-to-pink-to-purple-vertical-gradient: linear-gradient(180deg,
+        var(--orange-red) 0%,
+        var(--vivid-pink) 50%,
+        var(--electric-violet) 100%);
 
-    --red-to-pink-to-purple-horizontal-gradient: linear-gradient(
-      90deg,
-      var(--orange-red) 0%,
-      var(--vivid-pink) 50%,
-      var(--electric-violet) 100%
-    );
+    --red-to-pink-to-purple-horizontal-gradient: linear-gradient(90deg,
+        var(--orange-red) 0%,
+        var(--vivid-pink) 50%,
+        var(--electric-violet) 100%);
 
     --pill-accent: var(--bright-blue);
 
@@ -53,94 +49,105 @@
 
 <main class="main">
   <div class="content">
-        <app-topbar></app-topbar>
-        <app-header></app-header>
-
-
-        <section class="bg-center bg-no-repeat bg-[url('https://flowbite.s3.amazonaws.com/docs/jumbotron/conference.jpg')] bg-gray-700 bg-blend-multiply">
-          <div class="px-4 mx-auto max-w-screen-xl text-center py-24 lg:py-56">
-              <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none text-white md:text-5xl lg:text-6xl">We invest in the world’s potential</h1>
-              <p class="mb-8 text-lg font-normal text-gray-300 lg:text-xl sm:px-16 lg:px-48">Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.</p>
-              <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-                  <a href="#" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
-                      Get started
-                      <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                      </svg>
-                  </a>
-                  <a href="#" class="inline-flex justify-center hover:text-gray-900 items-center py-3 px-5 sm:ms-4 text-base font-medium text-center text-white rounded-lg border border-white hover:bg-gray-100 focus:ring-4 focus:ring-gray-400">
-                      Learn more
-                  </a>  
-              </div>
-          </div>
-      </section>
+    <app-topbar></app-topbar>
+    <app-header></app-header>
+    <section class="main-image bg-center bg-cover bg-no-repeat bg-main-image bg-blend-multiply min-h-screen ">
+      <div class="mx-auto max-w-screen-xl text-center py-20">
+        <h1
+          class="mb-4 text-4xl font-nunito font-normal tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
+          <span class="text-custom_green">Green</span>Lab</h1>
+        <p class="paragraph-info mb-8 text-lg font-thin font-nunito text-white lg:text-xl sm:px-16 lg:px-48">
+          Універсальна ПЛР Лабораторія</p>
+        <div class="space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
+          <a href="#"
+            class="gradient-button inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center">
+            Сдати аналіз
+          </a>
+          <a href="../assets/files/price2023greenlab.pdf"
+            class="gradient-button-orange inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center">
+            Прайс-лист
+          </a>
+        </div>
+        <p class="price-info">Ціни вказані за станом на 01.06.2023</p>
+        <div class="worktime text-center mt-10 py-2 mx-48">
+          <p>Графік роботи:</p>
+          <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
+          <p>Доставка з клініки м.Чорноморськ ПН-СБ (НД-вихідний)</p>
+        </div>
+        <div class="arrow-down">
+          <span></span>
+          <span></span>
+          <span></span>
+      </div>
+      </div>
+    </section>
     <div class="md:container md:mx-auto">
 
 
-    <h1 class="font-mono">
-      
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
-    <h1 class="font-mono">
-      Hello world! er
-    </h1>
+      <h1 class="font-mono">
+
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
+      <h1 class="font-mono">
+        Hello world! er
+      </h1>
     </div>
   </div>
 </main>
