--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,10 +7,14 @@
             </a>
         </div>
         <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Головна</a>
-        <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Послуги</a>
+        <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Послуги<svg class="float-right w-5 h-4 mt-1 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 8 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
+        </svg></a>
         <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Правила збору
             проб
-            <svg class="w-6 h-4 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+            <svg class="float-right w-5 h-4 mt-1 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                 viewBox="0 0 8 14">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
@@ -19,6 +23,5 @@
         <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Як здати
             аналіз</a>
         <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Контакти</a>
-
     </nav>
 </header>
