add contact component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,27 +1,33 @@
-<header class="container bg-white">
-    <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 lg:px-8" aria-label="Global">
-        <div class="flex lg:flex-1">
-            <a href="#" class="-m-1.5 p-1.5 grid justify-items-center">
-                <img class="h-8 w-auto" src="../../../assets/images/logo.png" alt="logo">
-                <div class="title-text text-slate-950 font-montserrat_alternates font-bold text-sm">Green PCR Lab</div>
+<header class="bg-white">
+    <div class="container">
+        <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 lg:px-8" aria-label="Global">
+            <div class="flex lg:flex-1">
+                <a routerLink="/" class="-m-1.5 p-1.5 grid justify-items-center">
+                    <img class="h-8 w-auto" src="../../../assets/images/logo.png" alt="logo">
+                    <div class="title-text text-slate-950 font-montserrat_alternates font-bold text-sm">Green PCR Lab
+                    </div>
+                </a>
+            </div>
+            <a routerLink="/"
+                class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Головна</a>
+            <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Правила збору
+                проб
+                <svg class="float-right w-5 h-3 mt-1.5 text-gray-800" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
+                </svg>
             </a>
-        </div>
-        <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Головна</a>
-        <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Правила збору
-            проб
-            <svg class="float-right w-5 h-3 mt-1.5 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-                viewBox="0 0 8 14">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
-            </svg>
-        </a>
-        <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Послуги<svg class="float-right w-5 h-3 mt-1.5 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-            viewBox="0 0 8 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
-        </svg></a>
-        <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Як здати
-            аналіз</a>
-        <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Контакти</a>
-    </nav>
+            <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Послуги<svg
+                    class="float-right w-5 h-3 mt-1.5 text-gray-800" aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 8 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
+                </svg></a>
+            <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Як здати
+                аналіз</a>
+            <a routerLink="/contact"
+                class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Контакти</a>
+        </nav>
+    </div>
 </header>
