--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -6,16 +6,16 @@
                     class="flex flex-wrap font-raleway items-center mb-6 space-x-12 text-sm font-tiny text-white sm:mb-0">
                     <li>
                         <img class="float-left mr-2" src="../../../assets/images/topbar/address.ico" alt="address" />
-                        <a class="hover:text-gray_300" href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9"
+                        <a class="hover:text-gray-300" href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9"
                             target="_blank">м.Чорноморськ, вул.Олександрійська, 2</a>
                     </li>
                     <li>
                         <img class="float-left mr-2" src="../../../assets/images/topbar/phone.ico" alt="phone" />
-                        <a class="hover:text-gray_300" href="tel:">+380962986084</a>
+                        <a class="hover:text-gray-300" href="tel:">+380962986084</a>
                     </li>
                     <li>
                         <img class="float-left mr-2" src="../../../assets/images/topbar/email.ico" alt="email" />
-                        <a class="hover:text-gray_300"
+                        <a class="hover:text-gray-300"
                             href="mailto:green.laboratoriya@gmail.com">green.laboratoriya&#64;gmail.com</a>
                     </li>
                 </ul>
