--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-white">
+<header class="bg-white sticky w-screen">
     <div class="container">
         <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 lg:px-8" aria-label="Global">
             <div class="flex lg:flex-1">
@@ -24,7 +24,7 @@
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="m1 13 5.7-5.326a.909.909 0 0 0 0-1.348L1 1" />
                 </svg></a>
-            <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Як здати
+            <a routerLink="/guide" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Як здати
                 аналіз</a>
             <a routerLink="/contact"
                 class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Контакти</a>
