--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,10 +47,11 @@
   }
 </style>
 
-<div>
+<div class="overflow-x-hidden">
   <app-topbar></app-topbar>
   <app-header></app-header>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
 
 
