--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -40,7 +40,7 @@
               </div>
           </div>
       </div>
-      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-white lg:my-8" />
+      <hr class="my-6 sm:mx-auto lg:my-8 " />
       <div class="sm:flex sm:items-center sm:justify-between">
           <span class="text-sm text-white sm:text-center dark:text-gray-400">© 2023 GreenLab. All Rights Reserved.
           </span>
