--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,40 +1,40 @@
-<footer class=" absolute inset-x-0 bg-white dark:bg-gray-900">
+<footer class=" bg-gray-900">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
-              <a href="https://flowbite.com/" class="flex items-center">
-                  <img src="../../assets/images/logo.png" class="h-8 me-3" alt="FlowBite Logo" />
-                  <span class="self-center text-2xl font-thin whitespace-nowrap dark:text-white">Green Lab</span>
+              <a routerLink="/" class="flex items-center">
+                  <img src="../../assets/images/logo.png" class="h-8 me-3" alt="GrenLab Logo" />
+                  <span class="self-center text-2xl font-thin whitespace-nowrap text-white">Green Lab</span>
               </a>
           </div>
           <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
               <div>
-                  <ul class="text-white dark:text-gray-400 font-light">
+                  <ul class="text-white font-light">
                       <li class="mb-4">
-                          <a href="https://flowbite.com/" class="hover:underline">Головна</a>
+                          <a routerLink="/" class="hover:text-light-green">Головна</a>
                       </li>
                       <li>
-                          <a href="https://tailwindcss.com/" class="hover:underline">Дозвільні документи</a>
+                          <a href="/" class="hover:text-light-green">Дозвільні документи</a>
                       </li>
                   </ul>
               </div>
               <div>
-                  <ul class="text-white dark:text-gray-400 font-thin">
+                  <ul class="text-white font-thin">
                       <li class="mb-4">
-                          <a href="https://github.com/themesberg/flowbite" class="hover:underline ">Направлення на дослідження</a>
+                          <a href="../../../assets/files/blank.pdf" class="hover:text-light-green">Направлення на дослідження</a>
                       </li>
                       <li>
-                          <a href="https://discord.gg/4eeurUVvTy" class="hover:underline">Прайс-лист</a>
+                          <a href="../../../assets/files/price2023greenlab.pdf" class="hover:text-light-green">Прайс-лист</a>
                       </li>
                   </ul>
               </div>
               <div>
-                  <ul class="text-white dark:text-gray-400 font-thin">
+                  <ul class="text-white font-thin">
                       <li class="mb-4">
-                          <a href="#" class="hover:underline">Інструкція взяття проб</a>
+                          <a routerLink="/guide" class="hover:text-light-green">Інструкція взяття проб</a>
                       </li>
                       <li>
-                          <a href="#" class="hover:underline">Контакти</a>
+                          <a routerLink="/contact" class="hover:text-light-green">Контакти</a>
                       </li>
                   </ul>
               </div>
