--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,22 +1,22 @@
 <section class="main-image bg-center bg-cover bg-no-repeat bg-main-image bg-blend-multiply min-h-screen ">
-    <div class="mx-auto max-w-screen-xl text-center py-20">
-      <h1
-        class="mb-4 text-4xl font-nunito font-normal tracking-tight leading-none text-white md:text-5xl lg:text-6xl">
-        <span class="text-custom_green">Green</span>Lab</h1>
-      <p class="paragraph-info mb-8 text-lg font-thin font-nunito text-white lg:text-xl sm:px-16 lg:px-48">
+    <div class="mx-auto max-w-screen-xl text-center pt-14 pb-0">
+      <h2
+        class="mb-4 mt-0 text-6xl font-nunito font-normal tracking-tight leading-none text-white lg:text-8xl">
+        <span class="text-custom_green">Green</span>Lab</h2>
+      <p class="paragraph-info mb-8 text-2xl font-thin font-nunito text-white lg:text-2xl">
         Універсальна ПЛР Лабораторія</p>
-      <div class="space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
+      <div class="home-buttons space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
         <a href="#"
-          class="gradient-button inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center">
-          Сдати аналіз
+          class="gradient-button-green inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center">
+          Здати аналіз
         </a>
         <a href="../assets/files/price2023greenlab.pdf"
-          class="gradient-button-orange inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center">
+          class="gradient-button-blue inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center">
           Прайс-лист
         </a>
       </div>
-      <p class="price-info">Ціни вказані за станом на 01.06.2023</p>
-      <div class="worktime text-center mt-10 py-2 mx-48">
+      <p class="price-info font-raleway my-5">Ціни вказані за станом на 01.06.2023</p>
+      <div class="worktime text-center font-jost mx-3 p-1">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
         <p>Доставка з клініки м.Чорноморськ ПН-СБ (НД-вихідний)</p>
