--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -1,9 +1,9 @@
-<header class="topbar shadow">
+<header class="topbar">
     <div class="container">
-        <div class="w-full max-w-screen-xl mx-auto p-4 md:py-2">
-            <div class="sm:flex sm:items-center sm:justify-between min-h-full">
+        <div class="w-full max-w-screen-xl mx-auto py-4  md:p-2">
+            <div class="flex items-center justify-between min-h-full">
                 <ul
-                    class="flex flex-wrap font-raleway items-center mb-6 space-x-12 text-sm font-tiny text-white sm:mb-0">
+                    class="flex flex-wrap font-raleway place-content-center mb-0 text-sm font-tiny text-white sm:space-x-6">
                     <li>
                         <img class="float-left mr-2" src="../../../assets/images/topbar/address.ico" alt="address" />
                         <a class="hover:text-gray-300" href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9"
@@ -19,7 +19,7 @@
                             href="mailto:green.laboratoriya@gmail.com">green.laboratoriya&#64;gmail.com</a>
                     </li>
                 </ul>
-                <ul class="flex flex-wrap items-center space-x-3 mb-6 sm:mb-0">
+                <ul class="topbar-socials hidden flex-wrap items-center space-x-3 mb-6 sm:mb-0 lg:flex">
                     <li>
                         <a href="viber://chat?number=%2B380962986084" target="_blank" rel="noreferrer"><img
                                 src="../../../assets/images/topbar/viber.ico" alt="viber" /></a>
