--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,8 +15,8 @@
           Прайс-лист
         </a>
       </div>
-      <p class="price-info font-raleway my-5">Ціни вказані за станом на 01.06.2023</p>
-      <div class="worktime text-center font-jost mx-3 p-1">
+      <!-- <p class="price-info font-raleway my-5">Ціни вказані за станом на 01.06.2023</p> -->
+      <div class="worktime text-center font-jost mx-3 p-1 my-6">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
         <p>Доставка з клініки м.Чорноморськ ПН-СБ (НД-вихідний)</p>
