--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class=" bg-gray-900">
-    <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
+    <div class="flex flex-col mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
               <a routerLink="/" class="flex items-center">
@@ -7,37 +7,25 @@
                   <span class="self-center text-2xl font-thin whitespace-nowrap text-white">Green Lab</span>
               </a>
           </div>
-          <div class="grid grid-cols-2 gap-8 sm:gap-6 sm:grid-cols-3">
-              <div>
-                  <ul class="text-white font-light">
-                      <li class="mb-4">
+          <div class="footer-link grid grid-cols-2 text-center   text-white font-thin list-none items-center">
+                      <li>
                           <a routerLink="/" class="hover:text-light-green">Головна</a>
                       </li>
                       <li>
                           <a href="/" class="hover:text-light-green">Дозвільні документи</a>
                       </li>
-                  </ul>
-              </div>
-              <div>
-                  <ul class="text-white font-thin">
-                      <li class="mb-4">
+                      <li>
                           <a href="../../../assets/files/blank.pdf" class="hover:text-light-green">Направлення на дослідження</a>
                       </li>
                       <li>
                           <a href="../../../assets/files/price2023greenlab.pdf" class="hover:text-light-green">Прайс-лист</a>
                       </li>
-                  </ul>
-              </div>
-              <div>
-                  <ul class="text-white font-thin">
-                      <li class="mb-4">
+                      <li>
                           <a routerLink="/guide" class="hover:text-light-green">Інструкція взяття проб</a>
                       </li>
                       <li>
                           <a routerLink="/contact" class="hover:text-light-green">Контакти</a>
                       </li>
-                  </ul>
-              </div>
           </div>
       </div>
       <hr class="my-6 sm:mx-auto lg:my-8 " />
