--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,3 @@
-hr {
-    height: 4px;
-    background: rgb(56,226,255);
-    background: linear-gradient(90deg, rgba(56,226,255,1) 0%, rgba(116,218,241,1) 30%, #90fd72 72%, rgba(75,231,0,1) 100%);
-    border: none;
+.footer-link > li {
+    margin: 5% 0 5% 0;
 }
