--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,10 +7,17 @@
                     <div class="title-text text-slate-950 font-montserrat_alternates font-bold text-xs lg:text-sm ">Green PCR Lab</div>
                 </a>
             </div>
-            <div class="md:hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="25" height="25" viewBox="0 0 50 50">
+            <button 
+                class="burger-menu md:hidden"
+                (click)="navList = !navList">
+                <svg *ngIf="!navList" class="w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
                     <path d="M 0 7.5 L 0 12.5 L 50 12.5 L 50 7.5 L 0 7.5 z M 0 22.5 L 0 27.5 L 50 27.5 L 50 22.5 L 0 22.5 z M 0 37.5 L 0 42.5 L 50 42.5 L 50 37.5 L 0 37.5 z"></path>
                 </svg>
+                <svg *ngIf="navList" class="w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
+            </button>
+            <div *ngIf="navList" class="absolute top-20 min-w-full max-h-screen bg-light-green">
+                <p>Links</p>
+                <p>Links2</p>
             </div>
             <a routerLink="/"
                 class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Головна</a>
