--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,10 @@
-<section class="main-image bg-center bg-cover bg-no-repeat bg-main-image bg-blend-multiply min-h-screen ">
+<div class="home-page">
+  <section class="main-image bg-center bg-no-repeat bg-main-image bg-blend-multiply">
     <div class="mx-auto max-w-screen-xl text-center pt-14 pb-0">
-      <h2
-        class="mb-4 mt-0 text-6xl font-nunito font-normal tracking-tight leading-none text-white lg:text-8xl">
-        <span class="text-custom_green">Green</span>Lab</h2>
-      <p class="paragraph-info mb-8 text-2xl font-thin font-nunito text-white lg:text-2xl">
+      <h2 class="mb-4 mt-0 text-6xl font-nunito font-normal tracking-tight leading-none text-white lg:text-8xl">
+        <span class="text-custom_green">Green</span>Lab
+      </h2>
+      <p class="paragraph-info mx-3 mb-8 text-2xl font-thin font-nunito text-white lg:text-2xl">
         Універсальна ПЛР Лабораторія</p>
       <div class="home-buttons space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
         <a href="#"
@@ -15,7 +16,7 @@
           Прайс-лист
         </a>
       </div>
-      <!-- <p class="price-info font-raleway my-5">Ціни вказані за станом на 01.06.2023</p> -->
+      <p class="price-info font-raleway my-5">Ціни вказані за станом на 01.06.2023</p>
       <div class="worktime text-center font-jost mx-3 p-1 my-6">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
@@ -25,6 +26,130 @@
         <span></span>
         <span></span>
         <span></span>
-    </div>
+      </div>
     </div>
   </section>
+  <div class="container">
+    <main class="about font-nunito relative -mt-8 bg-white rounded-3xl shadow-2xl shadow-gray-800">
+      <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold">Про нас</h2>
+      <h4 class="text-center font-bold pb-3">Універсальна ПЛР Лабораторія Green lab</h4>
+      <p class="indent-6">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
+        напрямок
+        роботи якого-молекулярно-генетичні дослідження хвороб дрібних домашніх тварин.Своєчасна і точна
+        діагностика є невід&rsquo;ємною частиною професіоналізму ветеринарного лікаря. Щодня до нього за допомогою
+        звертається безліч власників тварин з проханням допомогти їх улюбленому вихованцеві і найчастіше
+        питання, яке задають ветеринарним фахівцям: &#171;Лікар, що з ним?&raquo;.<br>
+      </p>
+      <p class="indent-6">Саме тому мы створили сучасну ветеринарну лабораторію, оснащену високотехнічним обладнанням і
+        використовує технології ХХІ століття, розраховану саме на роботу з чотириногими пацієнтами.
+        Наша особлива гордість-вперше для українських ветеринарних лікарів доступна технологія &ldquo;
+        ПЛР-РВ&rdquo; (ПЛР в реальному часі), що значно випередила інші варіанти ПЛР за точністю
+        дослідження. Якщо в біологічному матеріалі міститься хоча б найдрібніший фрагмент вірусу або
+        бактерії &ndash; метод ПЛР-РЧ розпізнає його.
+        Ми не збираємося зупинятися виключно на діагностиці інфекцій, і плануємо розвиватися відповідно до
+        потреб ветеринарної медицини. На сьогоднішній день ми працюємо над діагностикою спадкових
+        захворювань у тварин, визначенням груп крові та ін. А які дослідження актуальні саме для Ваших
+        пацієнтів? Яка область діагностики представляє для Вас особливий інтерес?
+        Повідомте нам про це в будь-який зручний для вас спосіб (контакти). Ми завжди відкриті до співпраці
+        і з увагою поставимося до ваших пропозицій!
+        Універсальна діагностична лабораторія-сучасні методи діагностики для професіоналів.
+      </p>
+      <p class="text-center mt-5">З повагою, універсальна лабораторія Green PCR lab.</p>
+      <img src="../../../assets/images/main/about_us.png" alt="about us">
+    </main>
+  </div>
+
+
+  <div class="certificate my-6">
+    <div class="row-auto container">
+      <div class="">
+        <h2 class="text-center text-lg font-semibold text-gray-800 py-5">Приклад результатів</h2>
+        <div class="text-center">
+          Результати відправляємо на e-mail адресу, а також по пошті на вказаний в бланці адресу.
+        </div>
+      </div>
+      <div class="py-5">
+        <img src="../../../assets/images/main/cert1.png" alt="Сертифікат №1">
+      </div>
+      <div class="pb-5">
+        <img src="../../../assets/images/main/cert2.png" alt="Сертифікат №2">
+      </div>
+    </div>
+  </div>
+  <br>
+  <hr>
+
+
+  <!-- Contacts /////////////////////////////// -->
+  <div class="contacts container py-10">
+    <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold"><svg
+        class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+        <path
+          d="M96 0C60.7 0 32 28.7 32 64V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H96zM208 288h64c44.2 0 80 35.8 80 80c0 8.8-7.2 16-16 16H144c-8.8 0-16-7.2-16-16c0-44.2 35.8-80 80-80zm-32-96a64 64 0 1 1 128 0 64 64 0 1 1 -128 0zM512 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V80zM496 192c-8.8 0-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm16 144c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V336z" />
+      </svg>Контакти</h2>
+    <div class="content">
+      <div class="flex flex-wrap place-content-center text-center space-y-10">
+        <div class="address-contacts">
+          <svg class="w-6 inline py-2 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path
+              d="M172.3 501.7C27 291 0 269.4 0 192 0 86 86 0 192 0s192 86 192 192c0 77.4-27 99-172.3 309.7-9.5 13.8-29.9 13.8-39.5 0zM192 272c44.2 0 80-35.8 80-80s-35.8-80-80-80-80 35.8-80 80 35.8 80 80 80z" />
+          </svg>
+          <div class="topic font-bold mb-3">Адреса</div>
+          <div>м.Чорноморськ</div>
+          <div>вул.Олександрійська, 2</div>
+        </div>
+        <div class="phone-contacts">
+          <svg class="w-6 inline py-2 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path
+              d="M497.4 361.8l-112-48a24 24 0 0 0 -28 6.9l-49.6 60.6A370.7 370.7 0 0 1 130.6 204.1l60.6-49.6a23.9 23.9 0 0 0 6.9-28l-48-112A24.2 24.2 0 0 0 122.6 .6l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.3 24.3 0 0 0 -14-27.6z" />
+          </svg>
+          <div class="topic font-bold mb-3">Телефон</div>
+          <div>+38-096-298-60-84</div>
+          <div>+38-096-628-27-00</div>
+          <br>
+          <div class="topbar-socials flex flex-wrap justify-center space-x-8">
+            <a href="viber://chat?number=%2B380962986084" target="_blank"><img
+                src="../../../assets/images/topbar/viber.ico" alt="viber"></a>
+            <a href="https://t.me/+380935582302" target="_blank"><img src="../../../assets/images/topbar/telegram.ico"
+                alt="telegram"></a>
+          </div>
+        </div>
+        <div class="email-contacts py-2">
+          <svg class="w-6 inline fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+            <path
+              d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
+          </svg>
+          <div class="topic font-bold mb-3">E-mail</div>
+          <div>green.laboratoriya&#64;gmail.com</div>
+          <div>vetpcrlab&#64;gmail.com</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <hr>
+  <div class="documents">
+    <div class="container">
+    <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold"><svg class="fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z"/></svg> Дозвільні документи</h2>
+    <div class="flex flex-wrap text-center">
+        <div class="">
+            <div>Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</div>
+            <br/>
+            <a href="/" class="gradient-button-green">Переглянути документи</a>
+        </div>
+        <div>
+        <a href="../../../assets/images/main/doc_certificate.png" target="_blank"><img class="my-3 w-30" loading="lazy" src="../../../assets/images/main/doc_certificate.png"></a>
+        </div>
+        </div>
+    </div>
+  </div>
+
+
+  <hr>
+  <br>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2756.2206500102093!2d30.64969710708409!3d46.30545521952355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c7c94218cb316f%3A0x1e698dad50c9fa6c!2z0J7Qu9C10LrRgdCw0L3QtNGA0ZbQudGB0YzQutCwINCy0YPQu9C40YbRjywgMiwg0KfQvtGA0L3QvtC80L7RgNGB0YzQuiwg0J7QtNC10YHRjNC60LAg0L7QsdC70LDRgdGC0YwsIDY4MDAw!5e0!3m2!1suk!2sua!4v1682688194174!5m2!1suk!2sua"
+    width="100%" height="600px" style="border:0;" allowfullscreen="" loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
