--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -1,13 +1,13 @@
 <header class="topbar">
     <div class="container">
-        <div class="w-full max-w-screen-xl mx-auto py-4  md:p-2">
+        <div class="w-full max-w-screen-xl mx-auto py-4 md:p-2">
             <div class="flex items-center justify-between min-h-full">
                 <ul
                     class="flex flex-wrap font-raleway place-content-center mb-0 text-sm font-tiny text-white sm:space-x-6">
-                    <li>
+                    <li class="place-content-center">
                         <img class="float-left mr-2" src="../../../assets/images/topbar/address.ico" alt="address" />
                         <a class="hover:text-gray-300" href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9"
-                            target="_blank">м.Чорноморськ, вул.Олександрійська, 2</a>
+                            target="_blank">м.Чорноморськ, вул.Олександрійська,  2</a>
                     </li>
                     <li>
                         <img class="float-left mr-2" src="../../../assets/images/topbar/phone.ico" alt="phone" />
