--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="bg-white sticky">
-    <div class="container">
+    <div class="md:container ml-2 mr-2">
         <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 lg:px-8" aria-label="Global">
             <div class="flex lg:flex-1">
                 <a routerLink="/" class="-m-1.5 p-1.5 grid justify-items-center">
@@ -7,7 +7,8 @@
                     <div class="title-text text-slate-950 font-montserrat_alternates font-bold text-xs lg:text-sm ">Green PCR Lab</div>
                 </a>
             </div>
-            <button 
+            <app-burger-menu></app-burger-menu>
+            <!-- <button 
                 class="burger-menu md:hidden"
                 (click)="navList = !navList">
                 <svg *ngIf="!navList" class="w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
@@ -15,10 +16,10 @@
                 </svg>
                 <svg *ngIf="navList" class="w-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
             </button>
-            <div *ngIf="navList" class="absolute top-20 min-w-full max-h-screen bg-light-green">
+            <div *ngIf="navList" class="absolute top-20 min max-h-screen bg-light-green">
                 <p>Links</p>
                 <p>Links2</p>
-            </div>
+            </div> -->
             <a routerLink="/"
                 class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Головна</a>
             <a href="#" class="text-base font-montserrat_alternates font-semibold leading-6 text-gray-900">Правила збору
