--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,7 +30,7 @@
     </div>
   </section>
   <div class="container">
-    <main class="about font-nunito relative -mt-8 bg-white rounded-3xl shadow-2xl shadow-gray-800">
+    <main class="about font-nunito relative p-3 -mt-8 bg-white rounded-3xl shadow-2xl shadow-gray-800">
       <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold">Про нас</h2>
       <h4 class="text-center font-bold pb-3">Універсальна ПЛР Лабораторія Green lab</h4>
       <p class="indent-6">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
