--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,13 +12,13 @@
                           <a routerLink="/" class="hover:text-light-green">Головна</a>
                       </li>
                       <li>
-                          <a href="/" class="hover:text-light-green">Дозвільні документи</a>
+                          <a routerLink="/" class="hover:text-light-green">Дозвільні документи</a>
                       </li>
                       <li>
-                          <a href="../../../assets/files/blank.pdf" class="hover:text-light-green">Направлення на дослідження</a>
+                          <a routerLink="../../../assets/files/blank.pdf" class="hover:text-light-green">Направлення на дослідження</a>
                       </li>
                       <li>
-                          <a href="../../../assets/files/price2023greenlab.pdf" class="hover:text-light-green">Прайс-лист</a>
+                          <a routerLink="../../../assets/files/price2023greenlab.pdf" class="hover:text-light-green">Прайс-лист</a>
                       </li>
                       <li>
                           <a routerLink="/guide" class="hover:text-light-green">Інструкція взяття проб</a>
