--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -62,7 +62,7 @@
 
   <div class="certificate my-6">
     <div class="row-auto container">
-      <div class="">
+      <div class="font-nunito">
         <h2 class="text-center text-lg font-semibold text-gray-800 py-5">Приклад результатів</h2>
         <div class="text-center">
           Результати відправляємо на e-mail адресу, а також по пошті на вказаний в бланці адресу.
@@ -81,7 +81,7 @@
 
 
   <!-- Contacts /////////////////////////////// -->
-  <div class="contacts container py-10">
+  <div class="contacts container py-10 font-nunito">
     <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold"><svg
         class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <path
@@ -133,7 +133,7 @@
     <div class="container">
     <h2 class="text-center text-4xl pt-3 pb-10 text-gray-800 font-semibold"><svg class="fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM288 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm211.3-43.3c-6.2-6.2-16.4-6.2-22.6 0L416 385.4l-28.7-28.7c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6l40 40c6.2 6.2 16.4 6.2 22.6 0l72-72c6.2-6.2 6.2-16.4 0-22.6z"/></svg> Дозвільні документи</h2>
     <div class="flex flex-wrap text-center">
-        <div class="">
+        <div class="font-nunito">
             <div>Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</div>
             <br/>
             <a href="/" class="gradient-button-green">Переглянути документи</a>
