--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="navbar bg-white sticky">
+<header class="navbar bg-white">
     <div class="md:container ml-2 mr-2">
         <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 lg:px-8" aria-label="Global">
             <div class="flex lg:flex-1">
