--- a/src/app/components/pages/contact/contact.component.html
+++ b/src/app/components/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full">
+<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-lg">
     <div class="flex flex-wrap justify-center ss:max-xl:min-w-full">
         <h2 class="text-center text-4xl py-10 text-gray-800 font-semibold"><svg
             class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
