--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -7,11 +7,11 @@
       <p class="paragraph-info mx-3 mb-8 text-2xl font-thin font-nunito text-white lg:text-2xl">
         Універсальна ПЛР Лабораторія</p>
       <div class="home-buttons space-y-4 sm:flex-row sm:justify-center sm:space-y-0">
-        <a href="#"
+        <a routerLink="/guide"
           class="gradient-button-green inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center">
           Здати аналіз
         </a>
-        <a href="../assets/files/price2023greenlab.pdf"
+        <a href="../../../../assets/files/price2023greenlab.pdf" target="_blank"
           class="gradient-button-blue inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center">
           Прайс-лист
         </a>
